session-02/lab02/web.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-web 
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
        resources: {}
status: {}
